@@ -12,6 +12,7 @@ Features:
 - Inspection: Comma in the end of section arg list isn't needed (see #255)
 - Inspection: Warn user if rule from 'rulesorder' isn't available in current or included files (see #254)
 - Inspection: Warn about string arguments split on several lines (see #259)
+- Injection: Inject regexp language into wildcard_constraints section params values (see #182)
 - Inspection: Correct using methods ancient, protected, directory (see #250)
 - Inspection: Warn users if they have callable arguments in sections that does not expect it (see #198)
 - Inspection: Warn users if they have keyword arguments in sections that does not expect it (see #196)
